--- a/react-learn/src/App.css
+++ b/react-learn/src/App.css
@@ -1,26 +1,20 @@
-.page {
-    width: 800px;
-    margin: 0 auto;
-    border: 2px solid;
-}
-
-.nav {
-    position: fixed;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: lightblue;
-    color: #fff;
-}
-
-.nav a {
-    display: block;
-    text-decoration: none;
+.page a {
+    color: #000;
     font-size: 2em;
-    margin: 10px;
-    color: inherit;
+    margin: 20px;
+    text-decoration: none;
 }
 
-a.active {
-    color: yellow;
+.page a.active {
+    color: #f40;
+}
+
+.container {
+    margin: 30px;
+}
+
+.container textarea {
+    width: 500px;
+    height: 200px;
+    font-size: 2em;
 }
